Update href to linkedin profile

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ footer:
   links:
      - label: "Linkedin"
        icon: "fab fa-fw fa-linkedin"
-       url: "https://linkedin.com/"
+       url: "https://www.linkedin.com/in/rickvschalkwijk/"
      - label: "GitHub"
        icon: "fab fa-fw fa-github"
        url: "https://github.com/rickvanschalkwijk"
